src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__interval__neg_interval.snap
---
source: src/expr/src/scalar/func/impls/interval.rs
expression: "#[sqlfunc(\n    sqlname = \"-\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::NegInterval)\n)]\nfn neg_interval(i: Interval) -> Result<Interval, EvalError> {\n    i.checked_neg().ok_or_else(|| EvalError::IntervalOutOfRange(i.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct NegInterval;
impl crate::func::EagerUnaryFunc for NegInterval {
    type Input<'a> = Interval;
    type Output<'a> = Result<Interval, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        neg_interval(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::NegInterval)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for NegInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
fn neg_interval(i: Interval) -> Result<Interval, EvalError> {
    i.checked_neg().ok_or_else(|| EvalError::IntervalOutOfRange(i.to_string().into()))
}
